err/pycrsltd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycrsltd'...
Compiling './lib/python3.5/site-packages/pycrsltd/bits.py'...
***   File "./lib/python3.5/site-packages/pycrsltd/bits.py", line 198
    raise AttributeError, 'newLUT should be float in range 0.0:1.0'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycrsltd/colorcal.py'...
***   File "./lib/python3.5/site-packages/pycrsltd/colorcal.py", line 116
    print 'Resp found to prev cmd (%s):%s' %(self.lastCmd, prevOut)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycrsltd/shaders.py'...
***   File "./lib/python3.5/site-packages/pycrsltd/shaders.py", line 46
    print "warning: shaderType was not a known type"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycrsltd/tests'...
Compiling './lib/python3.5/site-packages/pycrsltd/tests/testCALdevices.py'...
***   File "./lib/python3.5/site-packages/pycrsltd/tests/testCALdevices.py", line 21
    print 'Got ColorCAL serial#:%s firmware:%s_%s' %(cal.serialNum, cal.firm, cal.firmBuild)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycrsltd/tests/testColorMode.py'...
***   File "./lib/python3.5/site-packages/pycrsltd/tests/testColorMode.py", line 14
    print 'done'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycrsltd-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
